--- a/06_Paper/ER-ED/method.Rmd
+++ b/06_Paper/ER-ED/method.Rmd
@@ -53,7 +53,7 @@ Study data were collected and managed using REDCap electronic data capture tools
 
 The ER paradigm roughly consisted of three parts that will be described in the following.
 
-_Part one: ER task._ <br>
+*Part one: ER task.* <br>
 Part one could be described as standard ER task that followed a block design (see Figure X), similar to paradigms previously used by our group [@Scheffel2021]. 
 Participants were told to actively view neutral and negative pictures (see [2.4](##stimuli)) or to regulate all upcoming emotions by means of distraction, distancing and expressive suppression, respectively. 
 Every participant first had the condition "active viewing-neutral" that served as a baseline condition.
@@ -71,7 +71,7 @@ All participants received written instruction and completed a training session.
 After the training session, participants were asked about their applied ER strategies to avoid misapplication.
 The order of the three regulation blocks (distraction, distancing, and suppression) was randomized between participants.
 
-_Part two: ER effort discounting._ <br>
+*Part two: ER effort discounting.* <br>
 In the second part, ER effort discounting took place.
 The procedure of the discounting followed the COG-ED paradigm by Westbrook et al. [-@Westbrook2013] with major change.
 We used the following adaption that allowed the computation of SVs for different strategies without presuming that all individuals would inherently evaluate the same strategy as the easiest one: For each possible pairing (distraction vs. distancing, distraction vs. suppression, and distancing vs. suppression), two strategies with monetary values were presented.
@@ -81,7 +81,7 @@ The strategy that was not chosen was assigned the value 2 EUR.
 From this point on, comparisons between strategies followed the original COG-ED paradigm [@Westbrook2013].
 Participants were instructed to decide as realistically as possible, imaging the displayed money would really be up for election.
 
-_Part three: ER choice._ <br>
+*Part three: ER choice.* <br>
 After the discounting part, participants chose which of the three ER strategies (distraction, distancing or suppression) they wanted to reapply.
 Importantly, there were no further instruction, on what basis they should make their decision.
 Participants should make their decision freely, according to the criteria they considered important for themselves.
@@ -106,6 +106,8 @@ A complete list of all pictures and their classification into sets can be found 
 
 ## 2.5 Electromyography
 
+Electromyography (EMG) was recorded in the region of the *corrugator supercilii* and the *levator labii* at 1000 Hz sampling rate using Brain Vision Recorder (Brain Products Inc., Gilching, Germany).
+Passive
 [...] <!-- Anne tried to implement a sentence here. -->
 
 ## 2.6 Psychometric measures
