--- a/06_Paper/ER-ED/method.Rmd
+++ b/06_Paper/ER-ED/method.Rmd
@@ -106,8 +106,8 @@ A complete list of all pictures and their classification into sets can be found 
 
 ## 2.5 Electromyography
 
-Electromyography (EMG) was recorded in the region of the *corrugator supercilii* and the *levator labii* at 1000 Hz sampling rate using Brain Vision Recorder (Brain Products Inc., Gilching, Germany).
-Passive
+Bipolar electromyography (EMG) was recorded in the region of the *corrugator supercilii* and the *levator labii* at 1000 Hz sampling rate using Brain Vision Recorder (Brain Products Inc., Gilching, Germany).
+Passive surface Ag/AgCl electrodes (XX mm diameter, XX distance between electrodes) filled with electrolyte gel were used.
 [...] <!-- Anne tried to implement a sentence here. -->
 
 ## 2.6 Psychometric measures
