--- a/06_Paper/COG-ED/ref_COG-ED.bib
+++ b/06_Paper/COG-ED/ref_COG-ED.bib
@@ -11681,6 +11681,59 @@ These findings suggest that subjective listening effort depends on factors inclu
   urldate  = {2021-08-24},
 }
 
+@Article{Whelan2008,
+  author   = {Whelan, Robert},
+  journal  = {The Psychological Record},
+  title    = {Effective {Analysis} of {Reaction} {Time} {Data}},
+  year     = {2008},
+  issn     = {2163-3452},
+  month    = jul,
+  number   = {3},
+  pages    = {475--482},
+  volume   = {58},
+  abstract = {Most analyses of reaction time (RT) data are conducted by using the statistical techniques with which psychologists are most familiar, such as analysis of variance on the sample mean. Unfortunately, these methods are usually inappropriate for RT data, because they have little power to detect genuine differences in RT between conditions. In addition, some statistical approaches can, under certain circumstances, result in findings that are artifacts of the analysis method itself. A corpus of research has shown more effective analytical methods, such as analyzing the whole RT distribution, although this research has had limited influence. The present article will summarize these ad’ances in methods for analyzing RT data.},
+  doi      = {10.1007/BF03395630},
+  file     = {Springer Full Text PDF:https\://link.springer.com/content/pdf/10.1007%252FBF03395630.pdf:application/pdf},
+  language = {en},
+  url      = {https://doi.org/10.1007/BF03395630},
+  urldate  = {2021-10-14},
+}
+
+@Article{Ashby1980,
+  author     = {Ashby, F. Gregory and Townsend, James T.},
+  journal    = {Journal of Mathematical Psychology},
+  title      = {Decomposing the reaction time distribution: {Pure} insertion and selective influence revisited},
+  year       = {1980},
+  issn       = {0022-2496},
+  month      = apr,
+  number     = {2},
+  pages      = {93--123},
+  volume     = {21},
+  abstract   = {This paper investigates the consequences of extending the assumptions of pure insertion and selective influence (popular in RT theorizing) to the level of the distribution. In the case of pure insertion and under the additional assumption that the additive random variable is exponentially distributed, a solution is obtained which not only allows estimation of the exponential-rate parameter but also provides a test of the assumptions. The result is shown to be applicable not only when processing is serial but also for certain parallel models. In addition, discrimination between self-terminating and exhaustive search strategies is provided, and in the case of either, both parameter estimation and tests of the model are possible. Extensions to nonexponential models are investigated and a general method of moments solution is outlined. In the case of selective influence a general nonparametric alternative to Sternberg's additive factor method is developed. The problem of empirical estimation and application is then considered. Simulations which place bounds on the type I and II error are reported. Finally the first theorem is provided an illustrative application with data from a memory scanning experiment. The results provide some support for the double assumption of pure insertion and that the additive random variable is distributed exponentially.},
+  doi        = {10.1016/0022-2496(80)90001-2},
+  file       = {ScienceDirect Full Text PDF:https\://www.sciencedirect.com/science/article/pii/0022249680900012/pdf?md5=1845c7a16e018649212930510e02b01c&pid=1-s2.0-0022249680900012-main.pdf&isDTMRedir=Y:application/pdf},
+  language   = {en},
+  shorttitle = {Decomposing the reaction time distribution},
+  url        = {https://www.sciencedirect.com/science/article/pii/0022249680900012},
+  urldate    = {2021-10-14},
+}
+
+@Article{Berger2021,
+  author     = {Berger, Alexander and Kiefer, Markus},
+  journal    = {Frontiers in Psychology},
+  title      = {Comparison of {Different} {Response} {Time} {Outlier} {Exclusion} {Methods}: {A} {Simulation} {Study}},
+  year       = {2021},
+  issn       = {1664-1078},
+  pages      = {2194},
+  volume     = {12},
+  abstract   = {In response time (RT) research, RT outliers are typically excluded from statistical analysis to improve the signal-to-noise ratio. Nevertheless, there exist several methods for outlier exclusion. This poses the question, how these methods differ with respect to recovering the uncontaminated RT distribution. In the present simulation study, two RT distributions with a given population difference were simulated in each iteration. RTs were replaced by outliers following two different approaches. The first approach generated outliers at the tails of the distribution, the second one inserted outliers overlapping with the genuine RT distribution. We applied ten different outlier exclusion methods and tested, how many pairs of distributions significantly differed. Outlier exclusion methods were compared in terms of bias. Bias was defined as the deviation of the proportion of significant differences after outlier exclusion from the proportion of significant differences in the uncontaminated samples (before introducing outliers). Our results showed large differences in bias between the exclusion methods. Some methods showed a high rate of Type-I errors and should therefore clearly not be used. Overall, our results showed that applying an exclusion method based on z-scores / standard deviations introduced only small biases, while the absence of outlier exclusion showed the largest absolute bias.},
+  doi        = {10.3389/fpsyg.2021.675558},
+  file       = {Full Text PDF:https\://www.frontiersin.org/articles/10.3389/fpsyg.2021.675558/pdf:application/pdf},
+  shorttitle = {Comparison of {Different} {Response} {Time} {Outlier} {Exclusion} {Methods}},
+  url        = {https://www.frontiersin.org/article/10.3389/fpsyg.2021.675558},
+  urldate    = {2021-10-14},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
