--- a/06_Paper/COG-ED/ref_COG-ED.bib
+++ b/06_Paper/COG-ED/ref_COG-ED.bib
@@ -11734,6 +11734,43 @@ These findings suggest that subjective listening effort depends on factors inclu
   urldate    = {2021-10-14},
 }
 
+@Article{Houtman2012,
+  author    = {Houtman, Femke and Castellar, Elena Núñez and Notebaert, Wim},
+  journal   = {Journal of Cognitive Psychology},
+  title     = {Orienting to errors with and without immediate feedback},
+  year      = {2012},
+  issn      = {2044-5911},
+  month     = may,
+  number    = {3},
+  pages     = {278--285},
+  volume    = {24},
+  abstract  = {A slow-down in reaction time (RT) after committing an error is a well-known effect. Recently, Notebaert and colleagues (Notebaert et al., 2009; Núñez Castellar, Kuhn, Fias, \& Notebaert, 2010) suggested that posterror slowing is a reaction to the infrequent nature of errors. After infrequent errors, posterror slowing was observed but after infrequent correct trials, postcorrect slowing was observed. These data were obtained in a paradigm with trial-by-trial feedback. In this study we tested whether posterror slowing was similar with and without immediate feedback. We manipulated the overall accuracy parametrically per condition (50\%, 70\%, and 90\% accuracy) and predicted an increase in posterror slowing as the accuracy increased. This linear effect was observed with and without immediate feedback. The data are interpreted in terms of an orienting response towards unexpected events.},
+  doi       = {10.1080/20445911.2011.617301},
+  file      = {Full Text PDF:https\://www.tandfonline.com/doi/pdf/10.1080/20445911.2011.617301:application/pdf},
+  keywords  = {Feedback, Orienting account, Posterror slowing},
+  publisher = {Routledge},
+  url       = {https://doi.org/10.1080/20445911.2011.617301},
+  urldate   = {2021-10-14},
+}
+
+@Article{Dutilh2012,
+  author   = {Dutilh, Gilles and Vandekerckhove, Joachim and Forstmann, Birte U. and Keuleers, Emmanuel and Brysbaert, Marc and Wagenmakers, Eric-Jan},
+  journal  = {Attention, Perception, \& Psychophysics},
+  title    = {Testing theories of post-error slowing},
+  year     = {2012},
+  issn     = {1943-393X},
+  month    = feb,
+  number   = {2},
+  pages    = {454--465},
+  volume   = {74},
+  abstract = {People tend to slow down after they make an error. This phenomenon, generally referred to as post-error slowing, has been hypothesized to reflect perceptual distraction, time wasted on irrelevant processes, an a priori bias against the response made in error, increased variability in a priori bias, or an increase in response caution. Although the response caution interpretation has dominated the empirical literature, little research has attempted to test this interpretation in the context of a formal process model. Here, we used the drift diffusion model to isolate and identify the psychological processes responsible for post-error slowing. In a very large lexical decision data set, we found that post-error slowing was associated with an increase in response caution and—to a lesser extent—a change in response bias. In the present data set, we found no evidence that post-error slowing is caused by perceptual distraction or time wasted on irrelevant processes. These results support a response-monitoring account of post-error slowing.},
+  doi      = {10.3758/s13414-011-0243-2},
+  file     = {Springer Full Text PDF:https\://link.springer.com/content/pdf/10.3758%2Fs13414-011-0243-2.pdf:application/pdf},
+  language = {en},
+  url      = {https://doi.org/10.3758/s13414-011-0243-2},
+  urldate  = {2021-10-14},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
